--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
     "name": "uneaowu/path",
     "description": "A library for working with filesystem paths",
     "type": "library",
+    "require": {
+        "php": "^8.3"
+    },
     "require-dev": {
         "symfony/var-dumper": "^7.2",
         "phpstan/phpstan": "^2.1",
